Bug 382310 - Polygon tool's vector shapes are not inmediatly selected when switching to select/edit shapes tool.
Summary: Polygon tool's vector shapes are not inmediatly selected when switching to se...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layers/Vector (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-07-13 17:58 UTC by Quiralta
Modified: 2018-02-24 11:02 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Quiralta 2017-07-13 17:58:41 UTC
To reproduce:
*Create a shape with the polygon tool
*Select either the select or edit shapes tool (to edit the just created shape)

-Result: previous edited shape will be automatically selected.

-Expected result: shape that is just created should be the selected one.

The loose of focus feels a bit unpractical for the workflow. This on git-master build in a archlinux system.
Comment 1 Dmitry Kazakov 2018-02-24 11:02:06 UTC
Git commit c46a1e30a342c01796760a6befe57d0643310097 by Dmitry Kazakov.
Committed on 24/02/2018 at 11:00.
Pushed by dkazakov into branch 'master'.

Make shape tools to select newly added shapes

M  +18   -2    libs/ui/tool/kis_tool_shape.cc

https://commits.kde.org/krita/c46a1e30a342c01796760a6befe57d0643310097