Make shape tools to select newly added shapes

BUG:382310